# emul

./: .gitignore  Cargo.toml  README.md  vorpal_bunny_prompt.txt
src/: ai_handler.rs  bluenoise.rs  bot.rs  config.rs  db.rs  main.rs  nyaa_parser.rs
testdata/: nyaa.html
