[package]
name = "emul"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
irc = { version = "1.1.0", default-features = false, features = ["tls-rust", "tokio-rustls"] }
rand = "0.9.0"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
