[package]
name = "emul"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
irc = { version = "1.1.0", default-features = false, features = ["tls-rust", "tokio-rustls"] }
rand = "0.9.0" # Keep existing if present, otherwise add
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "zstd", "http2", "json", "deflate", "gzip"] }
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
rustls = "0.23.25"
scraper = "0.23.1"
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
mockito = "1.4.0" # For mocking HTTP requests in tests
